{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 309,
  "lineage": "76211843-39a8-f35d-6182-2f3279046c77",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "instance_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:742790453471:instance/i-0f340a5b053d71b11",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0f340a5b053d71b11",
            "instance_id": "i-0f340a5b053d71b11",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "kp2_7/4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-01beb7d87b92c58ea",
            "private_dns": "ip-10-193-220-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.193.220.8",
            "public_ip": "54.89.203.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-011af44f53eeca2aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae054fb0b60421fa",
            "tags": {
              "Name": "ec2_ssh"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00449c1d6a17a98e2",
              "sg-0e4fd7d3b403ad2e6"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "instance_data2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:742790453471:instance/i-01c220e34ce861988",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-01c220e34ce861988",
            "instance_id": "i-01c220e34ce861988",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "kp2_7/4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-069d0798ba497cd7a",
            "private_dns": "ip-10-193-221-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.193.221.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00ec0645992990d32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001a37bd04001d3d1",
            "tags": {
              "Name": "ec2_connect"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053792f3059d8728d",
              "sg-096bf1bd0a9620d92"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:742790453471:transit-gateway/tgw-091ddf0a13ca3353e",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "enable",
            "dns_support": "enable",
            "id": "tgw-091ddf0a13ca3353e",
            "multicast_support": "disable",
            "owner_id": "742790453471",
            "propagation_default_route_table_id": "tgw-rtb-0a5be1dfebe63702a",
            "tags": {
              "Name": "tgw_top3"
            },
            "tags_all": {
              "Name": "tgw_top3"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_rtb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:transit-gateway-route-table/tgw-rtb-04d9787b775b78044",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-04d9787b775b78044",
            "tags": {
              "Name": "tgw_rtb1"
            },
            "tags_all": {
              "Name": "tgw_rtb1"
            },
            "transit_gateway_id": "tgw-091ddf0a13ca3353e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_rtb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:transit-gateway-route-table/tgw-rtb-08ac9f6ef2c1d32c8",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-08ac9f6ef2c1d32c8",
            "tags": {
              "Name": "tgw_rtb2"
            },
            "tags_all": {
              "Name": "tgw_rtb2"
            },
            "transit_gateway_id": "tgw-091ddf0a13ca3353e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgwrtb-tgwatch1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-04d9787b775b78044_tgw-attach-0ad37a32fd13bd6d1",
            "resource_id": "vpc-0dc838c193405c64d",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0ad37a32fd13bd6d1",
            "transit_gateway_route_table_id": "tgw-rtb-04d9787b775b78044"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_rtb1",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_attachment1",
            "aws_subnet.subnetsforvpc1",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgwrtb-tgwatch2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-08ac9f6ef2c1d32c8_tgw-attach-033f0c9a46764f9a3",
            "resource_id": "vpc-016c812133099d086",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-033f0c9a46764f9a3",
            "transit_gateway_route_table_id": "tgw-rtb-08ac9f6ef2c1d32c8"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_rtb2",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_attachment2",
            "aws_subnet.subnetsforvpc2",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "rtbprop1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-04d9787b775b78044_tgw-attach-033f0c9a46764f9a3",
            "resource_id": "vpc-016c812133099d086",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-033f0c9a46764f9a3",
            "transit_gateway_route_table_id": "tgw-rtb-04d9787b775b78044"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_rtb1",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_attachment2",
            "aws_subnet.subnetsforvpc2",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "rtbprop2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-08ac9f6ef2c1d32c8_tgw-attach-0ad37a32fd13bd6d1",
            "resource_id": "vpc-0dc838c193405c64d",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0ad37a32fd13bd6d1",
            "transit_gateway_route_table_id": "tgw-rtb-08ac9f6ef2c1d32c8"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_rtb2",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_attachment1",
            "aws_subnet.subnetsforvpc1",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0ad37a32fd13bd6d1",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0ae054fb0b60421fa"
            ],
            "tags": {
              "Name": "tgw_atch_vpc1"
            },
            "tags_all": {
              "Name": "tgw_atch_vpc1"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-091ddf0a13ca3353e",
            "vpc_id": "vpc-0dc838c193405c64d",
            "vpc_owner_id": "742790453471"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.subnetsforvpc1",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-033f0c9a46764f9a3",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-001a37bd04001d3d1"
            ],
            "tags": {
              "Name": "tgw_atch_vpc2"
            },
            "tags_all": {
              "Name": "tgw_atch_vpc2"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-091ddf0a13ca3353e",
            "vpc_id": "vpc-016c812133099d086",
            "vpc_owner_id": "742790453471"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.subnetsforvpc2",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipforssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03691eefbb63a3854",
            "association_id": "eipassoc-0b75f8c72cf925a08",
            "domain": "vpc",
            "id": "eipalloc-03691eefbb63a3854",
            "instance": "i-0f340a5b053d71b11",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01beb7d87b92c58ea",
            "private_dns": "ip-10-193-220-8.ec2.internal",
            "private_ip": "10.193.220.8",
            "public_dns": "ec2-54-89-203-79.compute-1.amazonaws.com",
            "public_ip": "54.89.203.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_ssh"
            },
            "tags_all": {
              "Name": "eip_ssh"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2_ssh",
            "aws_internet_gateway.igw_01",
            "aws_subnet.subnetsforvpc1",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_connect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:742790453471:instance/i-01c220e34ce861988",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c220e34ce861988",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp2_7/4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-069d0798ba497cd7a",
            "private_dns": "ip-10-193-221-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.193.221.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00ec0645992990d32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001a37bd04001d3d1",
            "tags": {
              "Name": "ec2_connect"
            },
            "tags_all": {
              "Name": "ec2_connect"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053792f3059d8728d",
              "sg-096bf1bd0a9620d92"
            ]
          },
          "dependencies": [
            "aws_subnet.subnetsforvpc2",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:742790453471:instance/i-0f340a5b053d71b11",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f340a5b053d71b11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp2_7/4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01beb7d87b92c58ea",
            "private_dns": "ip-10-193-220-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.193.220.8",
            "public_ip": "54.89.203.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-011af44f53eeca2aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae054fb0b60421fa",
            "tags": {
              "Name": "ec2_ssh"
            },
            "tags_all": {
              "Name": "ec2_ssh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00449c1d6a17a98e2",
              "sg-0e4fd7d3b403ad2e6"
            ]
          },
          "dependencies": [
            "aws_subnet.subnetsforvpc1",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:internet-gateway/igw-0b9817bd9105dabfc",
            "id": "igw-0b9817bd9105dabfc",
            "owner_id": "742790453471",
            "tags": {
              "Name": "igw_01"
            },
            "tags_all": {
              "Name": "igw_01"
            },
            "vpc_id": "vpc-0dc838c193405c64d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpcrtb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:route-table/rtb-0cfeea2d30b6e8607",
            "id": "rtb-0cfeea2d30b6e8607",
            "owner_id": "742790453471",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9817bd9105dabfc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.193.221.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-091ddf0a13ca3353e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb_vpc1"
            },
            "tags_all": {
              "Name": "rtb_vpc1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc838c193405c64d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_internet_gateway.igw_01",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpcrtb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:route-table/rtb-026b3a045405f14b7",
            "id": "rtb-026b3a045405f14b7",
            "owner_id": "742790453471",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.193.220.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-091ddf0a13ca3353e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb_vpc2"
            },
            "tags_all": {
              "Name": "rtb_vpc2"
            },
            "timeouts": null,
            "vpc_id": "vpc-016c812133099d086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0077180129bea17cc",
            "route_table_id": "rtb-0cfeea2d30b6e8607",
            "subnet_id": "subnet-0ae054fb0b60421fa"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_internet_gateway.igw_01",
            "aws_route_table.vpcrtb1",
            "aws_subnet.subnetsforvpc1",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0373eb29942210309",
            "route_table_id": "rtb-026b3a045405f14b7",
            "subnet_id": "subnet-001a37bd04001d3d1"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_route_table.vpcrtb2",
            "aws_subnet.subnetsforvpc2",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_connectec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:security-group/sg-053792f3059d8728d",
            "description": "Allow connect inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053792f3059d8728d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connect from vm",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_connect",
            "name_prefix": "",
            "owner_id": "742790453471",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_connect"
            },
            "tags_all": {
              "Name": "allow_connect"
            },
            "timeouts": null,
            "vpc_id": "vpc-016c812133099d086"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_sshec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:security-group/sg-00449c1d6a17a98e2",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00449c1d6a17a98e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "742790453471",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc838c193405c64d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetsforvpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:subnet/subnet-0ae054fb0b60421fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.193.220.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae054fb0b60421fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742790453471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1sub 1"
            },
            "tags_all": {
              "Name": "1sub 1"
            },
            "vpc_id": "vpc-0dc838c193405c64d"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetsforvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:subnet/subnet-001a37bd04001d3d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.193.221.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001a37bd04001d3d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742790453471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2sub 1"
            },
            "tags_all": {
              "Name": "2sub 1"
            },
            "vpc_id": "vpc-016c812133099d086"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:vpc/vpc-0dc838c193405c64d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.193.220.0/24",
            "default_network_acl_id": "acl-0bc31c0f25fa8e825",
            "default_route_table_id": "rtb-09f25ecb205b44692",
            "default_security_group_id": "sg-0e4fd7d3b403ad2e6",
            "dhcp_options_id": "dopt-008da5bfc4d4fe8fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dc838c193405c64d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f25ecb205b44692",
            "owner_id": "742790453471",
            "tags": {
              "Name": "use1-prod-vpc 1"
            },
            "tags_all": {
              "Name": "use1-prod-vpc 1"
            }
          }
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:742790453471:vpc/vpc-016c812133099d086",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.193.221.0/24",
            "default_network_acl_id": "acl-0ea3e3fa86a6ebd2f",
            "default_route_table_id": "rtb-05d06b09539466f41",
            "default_security_group_id": "sg-096bf1bd0a9620d92",
            "dhcp_options_id": "dopt-008da5bfc4d4fe8fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-016c812133099d086",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d06b09539466f41",
            "owner_id": "742790453471",
            "tags": {
              "Name": "use1-prod-vpc 2"
            },
            "tags_all": {
              "Name": "use1-prod-vpc 2"
            }
          }
        }
      ]
    }
  ]
}